# videoanalytics

./: .gitignore  .readthedocs.yaml  Makefile  README.md  gitlab-ci.yml  requirements.txt  setup.cfg  videoanalytics-gpu.yml
.github/workflows/: python-package.yml
docker/: Dockerfile.gpu  README.md  build.sh
docs/: .buildinfo  Basic pipeline.html  Basic pipeline.ipynb  Events and statistics from ROIs.html  Events and statistics from ROIs.ipynb  Image transformations.html  Image transformations.ipynb  Integration with databases.html  Integration with databases.ipynb  Object detection.html  Object detection.ipynb  Object tracking.html  Object tracking.ipynb  background.html  database.html  devnotes.html  examples.html  genindex.html  index.html  index.md  intro.html  object_detection.html  object_tracking.html  objects.inv  pipeline.html  py-modindex.html  references.html  requirements.html  roi.html  search.html  searchindex.js  sinks.html  sources.html  utils.html  zeromq.html
docs/_sources/: Events and statistics from ROIs.nblink.txt  Image transformations.nblink.txt  Object detection.nblink.txt  Object tracking.nblink.txt  background.rst.txt  database.rst.txt  examples.rst.txt  index.rst.txt  intro.rst.txt  roi.rst.txt  (+7 more)
examples/: .gitignore
source/: Basic pipeline.nblink  Integration with databases.nblink  conf.py  devnotes.rst  index.rst  intro.rst  object_detection.rst  object_tracking.rst  pipeline.rst  references.rst  requirements.txt  rtsppub.rst  sinks.rst  sources.rst  utils.rst  zeromq.rst
tests/: test_basic_pipeline.py
uml/: class.uml  package.uml
(+45 files in other folders)
