[metadata]
name = videoanalytics
version = 0.0.1
author = Nicolás Eduardo Horro
author_email = nhorro@gmail.com
description = Library for prototyping video analytic applicatios.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nhorro/videoanalytics
project_urls =
    Bug Tracker = https://github.com/nhorro/videoanalytics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src